Fix SonarCloud issues.